tdf#152517 Fix gen backend treeview ctrl+minus behavior

For gen type backends, makes the cursor node and all sub nodes
collapsed on ctrl+minus key input.

Change-Id: I53730aca29dd47766cfe8b4cdc81539633ebd8c9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144286
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>